# HaskellInDepth

.devcontainer/: Dockerfile  devcontainer.json
part1/chapter1/: .gitignore  vocab.txt  vocab1.hs  vocab2.hs
part1/chapter2/: .gitignore  chapter2.cabal  expr.hs  hie.yaml  radar.hs
part1/chapter3/: hie.yaml  stockquotes.cabal
part1/chapter3/src/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
part2/chapter5/: chapter5.cabal  hie.yaml
part2/chapter5/src/: gcd.hs  reader.hs  sumlist.hs  weapons.hs
part2/chapter6/: chapter6.cabal
part2/chapter6/src/: EvalRPN.hs  EvalRPNTrans.hs
