cabal-version:      2.4
name:               chapter2
version:            0.1.0.0
author:             zilleplus

executable expr
    main-is:          expr.hs
    build-depends:    base ^>=4.16.4.0, text-show
    default-language: Haskell2010

executable radar
    main-is:          radar.hs
    build-depends:    
        base ^>=4.16.4.0
        ,fmt
        ,random
        ,text
    default-language: Haskell2010
    -- default-extensions: DeriveAnyClass 