cabal-version:      2.4
name:               chapter5
version:            0.1.0.0

-- synopsis: Code I played around with while studying chapter4

author:             Willem Melis

extra-source-files: CHANGELOG.md

executable reader
  --hs-source-dirs:
  --  src/reader
  main-is: src/reader.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
  default-language: Haskell2010

executable sql
  main-is: src/genSQL.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
    , text
  default-language: Haskell2010

executable gcd
  main-is: src/gcd.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
  default-language: Haskell2010

executable sumlist
  main-is: src/sumlist.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
  default-language: Haskell2010

executable weapons
  main-is: src/weapons.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
    , random
  default-language: Haskell2010

executable dicegame
  main-is: src/dicegame.hs
  build-depends:    
      base >=4.14.2.0
    , random
    , mtl
  default-language: Haskell2010

executable ioref
  main-is: src/ioref.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
  default-language: Haskell2010

executable stref
  main-is: src/stref.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
  default-language: Haskell2010

executable countzeros
  main-is: src/countzeros.hs
  build-depends:    
      base >=4.14.2.0
    , mtl
  default-language: Haskell2010
