cabal-version:      3.4
name:               chapter6
version:            0.1.0.0

-- synopsis: Code writting while reading chapter6

author:             Willem Melis

extra-source-files: CHANGELOG.md

executable EvalRPN
    main-is:          EvalRPN.hs
    build-depends:    
          base 
        , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable EvalRPNTrans
    main-is:          EvalRPNTrans.hs
    build-depends:    
          base 
        , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
